# leechess

./: .dockerignore  .gitignore  Dockerfile  PROGRESS.md  README.md  chess-learning-app-architecture.md  chess-learning-app-implementation-plan.md  chess-learning-app-literature-live-sync-plan.md  chess-learning-app-product-spec.md  fly.toml
client/: .gitignore  README.md  eslint.config.js  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
client/e2e/: helpers.ts  hint-ladder.e2e.ts  insight-bar.e2e.ts  literature.e2e.ts  play-submit.e2e.ts  play.e2e.ts  progress.e2e.ts  puzzles.e2e.ts  review.e2e.ts  smoke.e2e.ts  sound.e2e.ts
client/scripts/: build-openings.js  copy-stockfish.js  (+1 more)
server/: Makefile  pyproject.toml
server/app/: analysis.py  cpl.py  db.py  explanations.py  lichess_import.py  llm.py  main.py  models.py  motifs.py  puzzle_generation.py  schemas.py  seeding.py  spaced_repetition.py  summaries.py  wikibook.py
server/app/routers/: games.py  progress.py  puzzles.py  wikibook.py
server/scripts/: explain.py  import_lichess_puzzles.py  retag.py
server/tests/: conftest.py  test_analysis_job.py  test_analysis_reliability.py  test_classification.py  test_cpl.py  test_engine.py  test_explanations.py  test_games_api.py  test_lichess_import.py  test_motifs.py  test_pgn_roundtrip.py  test_progress_api.py  test_puzzle_generation.py  test_puzzle_selection.py  test_seeding.py  test_spaced_repetition.py  test_summaries.py  test_wikibook.py
server/tests/fixtures/: clientside_game.json  lichess_puzzles_sample.csv
shared/: classification.json
(+63 files in other folders)
