[project]
name = "server"
version = "0.1.0"
description = "leechess backend — FastAPI + SQLite + Stockfish"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.139.0",
    "python-chess>=1.999",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.50.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: fast tests, no Stockfish involved (run constantly: pytest -m 'not engine')",
    "engine: tests that shell out to the real Stockfish binary (slower)",
]
